<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"

    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:cardElevation="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/image_from_a_news_data_source"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:textColor="@color/toolbar_title_color"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_dialog" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_dialog"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:id="@+id/linearLayout_twitter"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/card_border_dialog">

                        <ImageView
                            android:id="@+id/image_dialog_twitter"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:contentDescription="@string/twitter_icon"
                            android:padding="5dp"
                            android:src="@drawable/ic_twitter_logo_dialog" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout_chrome"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/card_border_dialog">

                        <ImageView
                            android:id="@+id/image_dialog_chrome"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:contentDescription="@string/chrome_icon"
                            android:padding="5dp"
                            android:src="@drawable/ic_chrome" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>
</FrameLayout>
